initialize amap per-page reference counts before changing the amap's overall reference count.  this fixes the crashes seen for the last 9 months with web browers and plugins, which was also the cause of PR 46193.